pavis13-dbs: more review work, updated CoverLetter
git-svn-id: https://scivis.itn.liu.se/svn/publications/workinprogress/pavis13-dbs@4185 cd0c9ba3-fe29-0410-b0c2-9a6eeba77867

--- a/pavis13-dbs.tex
+++ b/pavis13-dbs.tex
@@ -186,7 +186,7 @@ The main goal of the designed system is to support the surgeon by reducing his c
 
 The second method, through which we support the electrode placement, is to present all collected data in a unified way and showing it in such a way that the optimal placement location is immediately visible and that the surgeon is guided towards it. The collected data consists of information about the intended target region, coming from the MRI scan, the MER recording, patient checks, and the associated uncertainties.
 
-The traditional use of a planning system and a MER System side by side allows for the mental coregistration of MER signals, but this is only possible with highest concentration of the surgeon. The situation gets worse, because up to five parallel trajectories are recorded at the same time. Correlation of the MER signal of interest to the corresponding trajectory (e.g., anterior, posterior lateral central or medial) becomes a confusing task for the surgeon. The simple and intuitive display of a significant MER signal within the space of the planned trajectory therefore is a an new feature with direct clinical benefit.   
+The traditional use of a planning system and a MER system side by side allows for the mental coregistration of MER signals, but this is only possible with highest concentration of the surgeon. The situation gets worse, because up to five parallel trajectories are recorded at the same time. Correlation of the MER signal of interest to the corresponding trajectory (e.g., anterior, posterior lateral central or medial) becomes a confusing task for the surgeon. The simple and intuitive display of a significant MER signal within the space of the planned trajectory therefore is a an new feature with direct clinical benefit.   
 
 %\subsection{Micro Electrode Recording}\label{sec:overview:mer}
 %MER is an intra-operative technique to gain information about functional areas of the brain. This information is gathered by inserting electrodes that measure the electric field properties created by the discharge of individual neurons in the surrounding tissue~\cite{McIntyre2006}. In the human brain there are a number of different types of neurons, which each have a distinct discharge behavior. The combination of those types leads to detectable discharge patterns that can be used to identify the region in which the measurement electrodes are located. Figure~\ref{fig:dischargepatterns} shows examples of the signals acquired from different brain regions. One possibility to distinguish the regions is to analyze the frequency of spikes within these signals. Usually this information is presented to the surgeon the raw  audio signal, an oscillogram, and as the result of a simple frequency analysis, e.\,g. a power density function.
@@ -364,9 +364,9 @@ The contextual view introduced above is shown to maintain the surgeon's mental r
 The localization procedure must not only communicate the electrode's position with respect to anatomical structures, but also with regard to the intended target region. An optimal placement of the stimulation electrode should be in the intersection of the potential target regions obtained from the different measurements. We support this in-detail navigation aspect by providing a 3D visualization, to which we refer as \emph{target closeup}, that shows the electrode embedded in the potential target regions together with the intended target region. To relate these potential target regions to the electrode and embed them into the spatial context, we additionally display the pre-operative MRI scans as a view-dependent projection on the back faces of the target closeup's bounding box. The rendering of the datasets has been made optional, as it on the one hand can provide valuable information regarding the intersection between the electrode and structures of interest, but on the other hand also occludes the potential target regions. The same orientation overlay, which is also used in the other 3D representations, is used in the electrode closeup to allow a seamless embedding of this view.
 %To support the placement process multiple potential target regions and their intersection are shown in a fused manner. These potential target regions are: the pre-operatively planned one using the MRI data, the one derived from the MER measurements, the information from the x-ray scans, and the regions derived from the patient tests, e.\,g. speech, memory and movement.
 
-We have to deal with three different types of potential target regions, whereby the type of a region is dependent on the way it has been acquired. First, the \emph{planned region}, which has been manually defined through segmentation by the surgeon on the basis of the pre-operative MRI scan. Therefore, we can apply volume rendering to show the result of this planning process. The second type of potential target region is derived from the \emph{MER signal} and has considerable uncertainty. This is projected onto the bottom plane of the detail view with the color coding which we have also used for visualizing the original MER signal. A user-defined safety margin is displayed to account for the occurring uncertainty sources. The third type of potential target region derive from the \emph{patient tests} performed when placing the actual stimulation electrode. As the patient checks are conducted during the electrode placement phase, the corresponding regions are changeable interactively. The region is shown as an ellipsoid in 3D assembled by connecting several check points. In the example shown in Figure~\ref{fig:targetregion}, we depict the ellipsoid generated from multiple speech tests in yellow, while the ellipsoid obtained from the movement tests is depicted in blue. The safety margins are depicted by using transparency, as it allows to communicate them intuitively while still maintaining a moderate level of occlusion. The width of the safety margins can be changed interactively by the surgeon and is dependent on experience and the electrode configuration that is used in the intervention.
+We have to deal with three different types of potential target regions, where the type of a region is depending on the way it has been acquired. First, the \emph{planned region}, which has been manually defined through segmentation by the surgeon on the basis of the pre-operative MRI scans. Therefore, we can apply volume rendering to show the result of this planning process. The second type is derived from the \emph{MER signal} and has considerable uncertainty. This is projected onto the back planes of the detail view with the color coding that we have also used for visualizing the original MER signal. A safety margin is displayed to account for the occurring uncertainty sources. The third type of potential target region are derived from the \emph{patient tests} performed when placing the stimulating electrode and must, therefore, be changeable interactively. The region is shown as an ellipsoid in 3D assembled by connecting several check points. In the example, shown in Figure~\ref{fig:targetregion}, we depict the ellipsoid generated from multiple speech tests in yellow, while the ellipsoid obtained from the movement tests is depicted in blue. The safety margins are depicted by using transparency, as it allows to communicate them intuitively while still maintaining a moderate level of occlusion. The width of the safety margins is dependent on experience and the electrode configuration that is used in the intervention.
 
-Similar to the contextual view, we give the surgeon the possibility to show the approximate location of the electrode as reconstructed from the x-ray scans. It is of special interest in this view, as shows it the deviation from the predicted electrode position, due to brain shift and minute bending of the needle, from its actual position. The uncertainty is shown by blurring the rendering of the electrode to fill the size of the uncertain region.
+Similar to the contextual view, we give the surgeon the possibility to show the approximate location of the electrode as reconstructed from the x-ray scans. It is of special interest in this view, as shows it the deviation from the predicted electrode position, due to brain shift and minute bending of the needle, from its actual position. The uncertainty of the reconstruction is shown by blurring the rendering of the electrode to fill the size of the uncertain region.
 
 Finally, we have to emphasize the intersection of the displayed target regions, as this intersection is the region where an optimal electrode placement would occur. We compute this intersection interactively and visualize it volumetrically with a green hue, the same which is also used for the green-to-red MER mapping. This way, the surgeon can verify the overlap and decide individually which region to place the electrode in. Furthermore, through the extent of the red region, the surgeon gets information about the mismatch between the pre-operative planning and the MER recordings. To further guide the surgeon during the electrode placement, we additionally change the color of the electrode when it penetrates the computed interaction of the potential target regions.
 
@@ -378,13 +378,13 @@ Finally, we have to emphasize the intersection of the displayed target regions, 
   \fbox{\includegraphics[width=0.465\columnwidth]{figures/segmentation_mer.png}}\\
   \fbox{\includegraphics[width=0.465\columnwidth]{figures/segmentation_patientchecks.png}}
   \fbox{\includegraphics[width=0.465\columnwidth]{figures/mer_patientchecks.png}}
-  \caption{The placement guide gives a quantitative overview of measured data for potential target regions. The top figure is a combination of all data values, where as the lower figures present detailed information by showing either all values or pairwise combinations. These combinations allow the surgeon to gain further insight into the measurements in certain situations, for example, when a measurement proves unreliable during the procedure.}
+  \caption{The placement guide gives a quantitative overview of measured data for potential target regions. The top figure is a combination of all data values, where as the lower figures present detailed information by showing either all values or pairwise combinations. These combinations enable the surgeon to gain further insight into the measurements in certain situations, for example, when a measurement proves unreliable during the procedure.}
   \label{fig:placementguide}
 \end{figure}
 
-In addition to the spatial context, as described in the previous section, we also present the potential target regions quantitatively in a view we call \emph{Placement Guide}. This view is centered on the intended target region with the access path depth on the abscissa and the likelihood of the actual target region on the ordinate. By showing the quantitative data in a line plot, the surgeon immediately sees in which areas most of of the measurements agree and is visually guided towards that position. As we have multiple decision values for each depth value, we can combine them in different ways. In our example we chose a weighted sum in which every weight can be selected by the surgeon. The combination function can be, however, freely exchanged according to future research. The values for uncertainty are combined in the same way and are rendered as transparent areas surrounding the line. Transparency has been shown to be a good way to convey uncertainty in other contexts~\cite{Djurcilov2002239}. With this representation the size of the transparent area immediately shows how uncertain a specific value is. This allows the surgeon to see the whole set of information at one time and decide on an optimal placement position. All combined views use spline-based smoothing on the curves, which can be disabled by the user on demand. This is done so that the surgeon is not distracted by abrupt changes in the data values that would otherwise draw unwanted attention . The current position of the electrode is shown as a vertical bar in each of the views.
+In addition to the spatial context, as described in the previous section, we also present the potential target regions quantitatively in a view we call \emph{placement guide}. This view is centered on the intended target region with the access path depth on the abscissa and the likelihood of the actual target region on the ordinate. By showing the quantitative data in a line plot, the surgeon immediately sees in which areas most of the measurements agree and is guided towards that position. As we have multiple decision values for each depth value, we can combine them in different ways. In our example we chose a weighted sum, but the combination function can be freely exchanged according to future research. The values for uncertainty are combined in the same way and are rendered as transparent areas surrounding the line. Transparency has been shown to be a good way to convey uncertainty in other contexts~\cite{Djurcilov2002239}. With this representation the size of the transparent area immediately shows how uncertain a specific value is. This lets the surgeon see the whole set of information at one time and decide on an optimal placement position. All combined views use spline-based smoothing on the curves, which can be disabled by the user on demand. This is done so that the surgeon is not distracted by abrupt changes in the data values that would otherwise draw unwanted attention . The current position of the electrode is shown as a vertical bar in each of the views.
 
-The top figure in Figure~\ref{fig:placementguide} shows the combined data of all values and is of central interest for the surgeon. It provides an overview of all measured data and guides him to the most likely, i.\,e.~highest, position. The curve will be assembled interactively while the stimulating electrode is being advanced and the patient checks are performed. Since the combined curve hides possible outliers and gives no feedback on the underlying values, the composition of each sample point can be examined in the top right as a bar plot that shows the probability and uncertainty for each decision factor separately. All bars are justified to the left and their width directly relates to the measured value. As with the line plot, a transparent box shows the area of uncertain values. One bar is rendered for each source of measurements, so that in our case (see Figure~\ref{fig:placementguide} there is one bar for the segmentation, MER, and one for each of the two patient checks. Including a line alongside the combined data for each of the decision factors would clutter the view and would distract the surgeon too much, which is why we chose to add the bar plot representation. There is, in addition, an optional view showing those decision factors separately. It is, furthermore, possible to view at all pairwise combinations of factors. Showing these auxiliary views, the surgeon can detect outliers and unexpected behavior immediately without distracting him from the main view. Toggling of these auxiliaries views can become important in an operation when the surgeon, for example, notices that the patient checks of this particular patient are not as reliable as expected or he detects a flaw in the segmentation. Furthermore, it is useful when he wants to inspect the data as if one of the measurements is not considered. This inspection might lead to the finding that one of the measurements is not reliable.
+The top figure in Figure~\ref{fig:placementguide} shows the combined data of all values and is of central interest for the surgeon. It provides an overview of all measured data and guides him to the most likely, i.\,e.~highest, position. The curve will be assembled interactively while the stimulating electrode is being advanced and the patient checks are performed. Since the combined curve hides possible outliers and gives no feedback on the underlying values, the composition of each sample point can be examined in the top right as a bar plot that shows the probability and uncertainty for each decision factor separately. All bars are justified to the left with their width directly relating to the measured value. As with the line plot, a transparent box shows the area of uncertain values. One bar is rendered for each source of measurements, so that in our case (see Figure~\ref{fig:placementguide}) there is one bar for the segmentation, MER, and one for each of the two patient checks. Including a line alongside the combined data for each of the decision factors would clutter the view and would distract the surgeon too much, which is why we chose to add the bar plot representation. There is,however, an optional view showing those decision factors separately. Furthermore, it is possible to view all pairwise combinations of factors. Showing these auxiliary views, the surgeon can detect outliers and unexpected behavior immediately without distracting him from the main view. Toggling of these auxiliaries views can become important in an operation when the surgeon, for example, notices that the patient checks of this particular patient are not as reliable as expected or he detects a flaw in the segmentation. Furthermore, it is useful when he wants to inspect the data as if one of the measurements is not considered. This inspection might lead to the finding that one of the measurements is not reliable.
 
 %If we exclude the surgeon's training and experience, the best location for the electrode placement is where most measurements overlap. The access path, on which the measurements are performed, has one degree of freedom which means that we can present the results of the measurements as a line plot. We chose to include the line plot in addition to the target closeup, which provides spatial information with regard to the scans, as it delivers qualitative information to the surgeon. Since it communicates the same information, it is shown right next to the target closeup. We experimented with embedding the line plot into the target closeup, but this cluttered the view so that the information was not as easily accessible.
 
@@ -395,13 +395,13 @@ In this section we describe selected implementation details of our system.
 
 \noindent \textbf{Multivolume raycasting.} For the contextual view we need to render registered multimodal datasets and at the same time integrate the electrodes and beads into the rendering. For the rendering we exploit GPU-based volume raycasting as presented by Kr\"uger and Westermann~\cite{kr}. We include the geometric information of objects into this raycasting scheme by modifying the exit points such that the raycasting process ends at those objects~\cite{Scharsach}. The objects are rendered in a separate pass and the results are blended to obtain the final rendering result. To achieve interactive multivolume raycasting we employ a modified version of the region based scene description as presented by Lindholm~et~al.~\cite{Lindholm2009}.
 
-\noindent \textbf{Skull stripping.} We implemented the skull stripping algorithm as presented by Beyer~et~al.~\cite{Beyer2007}. Although a complete segmentation would provide better results we want to prevent the required additional user interaction. The basis for this method is opacity peeling~\cite{Rezk-salama2006}, which is, in our case, performed on the conditional ray-casting results. Depending on a user-selected parameter the accumulated values are reset as soon as the early ray-termination criterion is reached. The skull stripping employed in our system uses registered CT and MRI scans to determine the boundary between the brain and the outer layers. This way, the values accumulated along a ray can be reset when the rays leaves the bone structures and the ray traversal through the brain starts. This method requires no user interaction and provides good and stable results.
+\noindent \textbf{Skull stripping.} We implemented the skull stripping algorithm as presented by Beyer~et~al.~\cite{Beyer2007}. Although a complete segmentation would provide better results we want to prevent the necessary user interaction. The basis for this method is opacity peeling~\cite{Rezk-salama2006}, which is in our case performed on the conditional ray-casting results. Depending on a user-selected parameter the accumulated values are reset as soon as the early ray-termination criterion is reached. The skull stripping employed in our system uses registered CT and MRI scans to determine the boundary between the brain and the outer layers. This way, the values accumulated along a ray can be reset when the rays leaves the bone structures and the ray traversal through the brain starts. This method requires no user interaction and provides good and stable results.
 
 %\noindent \textbf{Audio spatialization.} The electrodes record data which is saved, together with the depth of the electrodes, at a constant sampling rate. In order to achieve a meaningful spatialization the spatial distance between the sampling points must be modified so that each depth value has the same extent but consists of a varying number points. We have applied this normalization on the recorded data, which was used in Section~\ref{sec:overview:placement:spatialaudio}. Despite a changing speed in advancing the electrode, the data points are stretched so that the entry point of the trajectory is on the left side and the deepest recorded point or the target regions is on the right side.
 
 
 \section{Evaluation}\label{sec:evaluation}
-As computer-aided surgery systems are combining an increasing number of information from different sources, it is important that the interfaces reduce the cognitive efforts required to use the system~\cite{Visarius1997,Martelli2003}. To evaluate the practicability of the proposed system we have conducted a qualitative user-study with five neurosurgeons, all of whom have extensive experience in the field and perform DBS interventions on a regular basis. The study has been designed with respect to the guidelines for evaluating computer-aided surgery systems, which have been proposed by Martelli et al.~\cite{Martelli2003}. The neurosurgeons were shown a showcase demonstration of the system going through all three phases (planning, recording, and placement). A demonstration was chosen as a pre-study showed that the complexity of usage, in the current form, would hinder an unbiased evaluation. The data for this demonstration was recorded and reconstructed from a real intervention. After the demonstration, the neurosurgeons answered a questionnaire consisting of eight statements and questions, as well as a free text field for arbitrary comments. Each of these statements and questions had a positive and a negative reply with no abstain. The following table shows these statements and questions together with the number of positive answers:
+As computer-aided surgery systems are combining an increasing number of information from different sources, it is important that the interfaces reduce the cognitive efforts required to use the system~\cite{Visarius1997,Martelli2003}. To evaluate the practicability of the proposed system we have conducted a qualitative user-study with five neurosurgeons, all of whom have extensive experience in the field and perform DBS interventions on a regular basis. The study has been designed with respect to the guidelines for evaluating computer-aided surgery systems, which have been proposed by Martelli et al.~\cite{Martelli2003}. The neurosurgeons were shown a showcase demonstration of the system going through all three phases (planning, recording, and placement). A demonstration was chosen, as a pre-study showed that the complexity of usage, in the current form, would hinder an unbiased evaluation. The data for this demonstration was recorded and reconstructed from a real intervention. After the demonstration the neurosurgeons answered a questionnaire consisting of eight statements and questions, as well as a free text field for arbitrary comments. Each of these statements and questions had a positive and a negative reply with no abstain. The following table shows all statements and questions together with the number of positive answers:
 
 %If we denote the result of each question by dividing the number of positive reply by the number of participants, we get a scale in which all answers lie between 0 and 1.
 %The questions and their results in parentheses: %"The working areas are large and clearly visualized" (1.0), "The user is not disturbed by images, colors, or animation while interacting with the system" (0.8), "The result of any action done by the user is clearly and immediately visualized" (0.8), "The tools provided by the system are easy to use" (0.6), "System data is understandable and clearly visualized" (0.8), "The actions' succession proposed by the system is logical from the user's point of view" (1.0), "The system's features are compatible with all the user's expectations" (0.8), "Would you like to use this system during an intervention in addition to the old system?" (1.0), and "Is the fusion of MER signals with image data useful for increasing the accuracy?" (0.6)
@@ -419,10 +419,10 @@ Is the fusion of MER signals with image data useful for increasing the accuracy?
 \hline
 \end{tabular}
 
-\noindent \textbf{Discussion.} Overall, the feedback from the neurosurgeons was very positive. The least satisfied expert agreed to only five statements whereas the most satisfied expert agreed to all. On average the experts agreed to $6.5$ statements if we assume an equal weighting of the statements. The relatively bad score of only three positive answers to the last question seems to be the strongest drawback to the method, but considering that all of the experts would use our system in the operation room makes it a very good result. One expert emphasized especially the "correlations between target region and the neurophysiological data" as an important aspect of the system. Only two neurosurgeons did not see the benefits of incorporating the fused views, while they still liked the overlapping view of the different probable target regions. The third question confirmed the expected usability result from the pre-study.
+\noindent \textbf{Discussion.} Overall, the feedback from the neurosurgeons was very positive. The least satisfied expert agreed to only five statements whereas the most satisfied expert agreed to all. On average the experts agreed to $6.5$ statements if we assume an equal weighting of the statements. The relatively bad score of only three positive answers to the last question seems to be the strongest drawback to the method, but considering that all of the experts would use our system in the operation room makes it a good result. One expert emphasized especially the "correlations between target region and the neurophysiological data" as an important aspect of the system. Only two neurosurgeons did not see the benefits of incorporating the fused views, while they still liked the overlapping view of the different probable target regions. The third question confirmed the expected usability result from the pre-study.
 
 \section{Conclusions and Future Work}\label{sec:conclusions}
-In this paper we have presented a visualization system that has been designed to support neurosurgeons during DBS interventions by fusing measurement data, along with their uncertainties, with structual modalities to facilitate mental registration. This multimodal information is presented to the surgeon during the intervention both in the context of the rendered imaging data, as well as a separate view showing the combination of these measurements. As the MER and patient checks are performed during DBS interventions to improve the localization of the stimulation electrode, we feed back the results of these checks into our system. When visualizing and intersecting the potential target regions we take into account the different degrees of uncertainty that result from their acquisition process. This uncertainty-aware information fusion in image space as well as in a profile plot allows the surgeon to better assess the electrode placement and detect the optimal electrode placement effortlessly. To estimate the clinical impact of the presented system we performed an evaluation with five neurosurgeons, who regularly perform DBS interventions. The results indicate that the presented visualization approaches are of great interest and have the potential to improve DBS interventions.
+In this paper we have presented a visualization system that has been designed to support neurosurgeons during DBS interventions by fusing measurement data, along with their uncertainties, with structual modalities to facilitate mental registration. This multimodal information is presented to the surgeon during the intervention both in the context of the rendered imaging data, as well as a separate view showing the combination of these measurements. As the MER and patient checks are performed during DBS interventions to improve the localization of the stimulation electrode, we feed back the results of these checks into our system. When visualizing and intersecting the potential target regions we take into account the different degrees of uncertainty that result from their acquisition process. This uncertainty-aware information fusion in image space as well as in a profile plot enables the surgeon to better assess the electrode placement and detect the optimal electrode placement effortlessly. To estimate the clinical impact of the presented system we performed a qualitative evaluation with five neurosurgeons who regularly perform DBS interventions. The results indicate that the presented visualization approaches are of great interest and have the potential to improve DBS interventions.
 
 In the future we would like to further improve the presented system based on the feedback we have received from the surgeons during our evaluation. We would especially like to flatten the learning curve currently necessary. Furthermore, it would be very beneficial to evaluate its effectiveness in the surgery room. However, a full evaluation requires a lot of effort as it would require the system to be certified for usage in the operation room. While the current system considers most modalities, the integration of DTI could also be considered in the future. Another source of information we would like to include is the region of the brain that is affected by the stimulation signal, the \emph{volume of tissue activated}. This would simulate the region in the brain that would be influenced by the current electrode position and could thereby function as a prediction as well as a verification tool. While we have currently focused on the recording and placement phases of the DBS intervention, we would also like to extend the system for long term horizontal studies of electrode placements. A major part of this horizontal study would be the ability to compare the measured accuracy with the outcome of the intervention. As no extensive statistics about the long term effects of varying placement positions and the applied electric fields exist, this could be valuable information for further improving DBS interventions in the future.
 
