pavis13-dbs: minor changes
git-svn-id: https://scivis.itn.liu.se/svn/publications/workinprogress/pavis13-dbs@4188 cd0c9ba3-fe29-0410-b0c2-9a6eeba77867

--- a/pavis13-dbs.tex
+++ b/pavis13-dbs.tex
@@ -111,10 +111,10 @@ Deep Brain Stimulation (DBS) is a well-established procedure for reducing the sy
 
 In recent years Microelectrode Recording (MER) has emerged as an additional technique allowing the surgeon to better locate the target region for DBS intra-operatively~\cite{Lenz1988}. MER measures the electrical field of the brain during the surgery by inserting electrodes into the access path. The measured information is presented to the surgical staff by showing the amplitude in the time domain for each electrode, from which the expert differentiates functional regions of the brain. In order to allow for an intuitive and accurate placement of the electrodes, it is important that the surgeon has access to all these modalities in a unified manner.
 
-Within this paper we propose an interactive visualization system to support the surgeon during a DBS placement procedure. From the surgeons point of view, it is most important to create a comprehensive system supporting the decision-making about the optimal placement location for the emitting electrode to allow for a higher accuracy and precision. The system should increase the surgeon's mental registration between the different modalities and combine the uncertainties in a quantitative way so that his confidence in the collected data is increased.% We address these technical objectives by introducing two separate fusion techniques. One, we provide two views enhancing the final placement of the electrode by fusing 
+Within this paper we propose an interactive visualization system to support the surgeon during a DBS placement procedure. From the surgeons point of view, it is of great importance to obtain system support when identifying the optimal placement location for the emitting electrode, such that higher accuracy and precision can be achieved. Therefore, the system should support the surgeon's mental registration between the different modalities and combine the uncertainties in a quantitative way so that the confidence in the displayed data is increased.% We address these technical objectives by introducing two separate fusion techniques. One, we provide two views enhancing the final placement of the electrode by fusing 
 %
 %On the one hand, this is done by fusing the different modalities to increase the surgeon's mental registration between these. On the other hand, by combining the uncertainties and enabling access to this in a quantitative way, we can increase the surgeon's confidence in the gathered data. 
-We address these technical objectives in the following ways: We provide two views enhancing the final placement of the electrode by employing two separate fusion techniques. One, we combine the structural and functional information about the target region gathered from different sources, i.\,e. pre-operative scans, x-ray scans, MER, patient checks, and present them to the surgeon in order to guide him to the optimal placement location. The view fuses this data with the structural information surrounding the intended target region in a multimodal visualization. This enables a mental registration of the measured data to the imaging modalities and, thereby, provides context that the surgeon can draw upon during the placement decision. Two, we fuse the information about the occurring uncertainty and provide an information visualization approach to present the data in a quantitative way. The original data and derived information is presented as profile plots allowing the surgeon to see the optimal placement position in one glance and, thus, enable a more effective placement of the electrode.
+We address these technical objectives, by proposing a visualization system which provides two views enhancing the final placement of the electrode, by employing two separate fusion techniques. In the first view, we combine the structural and functional information about the target region gathered from different sources, i.\,e. pre-operative scans, x-ray scans, MER, patient checks, and present them to the surgeon in order to guide him to the optimal placement location. The view fuses this data with the structural information surrounding the intended target region in a multimodal visualization. This enables a mental registration of the measured data with the imaging modalities and, thereby, provides context that the surgeon can draw upon during the placement decision. In the second view, we fuse the information about the occurring uncertainty and provide an information visualization approach to present the data in a quantitative way. The original data and derived information is presented as profile plots allowing the surgeon to see the optimal placement position at one glance and, thus, enable a more effective placement of the electrode.
 
 %Within this paper we propose an interactive visualization system to support the DBS placement procedure by combining the values and uncertainties of these different measurements, whereby the combined information is used to guide the surgeon to the optimal placement location. To this end, we provide two views enhancing the final placement of the electrode. These views combine the information about the target region gathered from different sources, i.\,e. pre-operative scans, x-ray scans, MER, patient checks, and present them to the surgeon. One of the views fuses this data with the structural information surrounding the intended target region in a multimodal visualization. This enables a mental registration of the measured data to the imaging modalities and, thereby, provides context that the surgeon can draw upon during the placement decision. The other provides an information visualization approach to present the data in a quantitative way.
 
